--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Excursion comming soon!</title>
+    <title>Excursion coming soon!</title>
     <link rel="stylesheet" type="text/css" href="./Resources/style.css"/>
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <p>Download Excursion (Comming soon!)</p>
+    <div>
+      <h1>Discover hidden places in the world around you</h1>
+      <p>Download Excursion (Coming soon!)</p>
+    </div>
+    <div>
+      <video controls>
+        <source src="./resources/videos/excursion.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
+    <div>
+      <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest near you.</p>
+      <img src="./Resources/Images/camp.jpg" alt="A camp during sunset"/>
+      <img src="./Resources/Images/phone.png" alt="Phone"/>
+      <h2>Comming soon for iPhone and Android</h2>
+      <p>Download Excursion (Coming soon!)</p>
+    </div>
+    <div>
+      <p>© Excursion</p>
+    </div>
   </body>
 </html>
