Styling and html modifications

--- a/index.html
+++ b/index.html
@@ -2,28 +2,30 @@
 <html>
   <head>
     <title>Excursion coming soon!</title>
-    <link rel="stylesheet" type="text/css" href="./Resources/style.css"/>
+    <link rel="stylesheet" type="text/css" href="./Resources/css/style.css"/>
   </head>
   <body>
-    <div>
       <h1>Discover hidden places in the world around you</h1>
+    <div class="download">
       <p>Download Excursion (Coming soon!)</p>
     </div>
-    <div>
-      <video controls>
+      <video autoplay loop>
         <source src="./resources/videos/excursion.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
+    <div class="head">
+      <p>Your personal travel guide</p>
     </div>
-    <div>
-      <h2>Your personal travel guide</h2>
-      <p>Excursion remembers places you like, and recommends new points of interest near you.</p>
+      <p class="content">Excursion remembers places you like, and recommends new points of interest near you.</p>
       <img src="./Resources/Images/camp.jpg" alt="A camp during sunset"/>
-      <img src="./Resources/Images/phone.png" alt="Phone"/>
-      <h2>Comming soon for iPhone and Android</h2>
+      <p><img src="./Resources/Images/phone.png" alt="Phone"/></p>
+    <div class="head">
+      <p>Coming soon for iPhone and Android</p>
+    </div>
+    <div class="download">
       <p>Download Excursion (Coming soon!)</p>
     </div>
-    <div>
+    <div class="copyright">
       <p>© Excursion</p>
     </div>
   </body>
