--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" type="text/css" href="./Resources/css/style.css"/>
   </head>
   <body>
-      <h1>Discover hidden places in the world around you</h1>
+      <h1 id="top">Discover hidden places in the world around you</h1>
     <div class="download">
-      <p>Download Excursion (Coming soon!)</p>
+      <p><a href="#top">Download Excursion (Coming soon!)</a></p>
     </div>
       <video autoplay loop>
         <source src="./resources/videos/excursion.mp4" type="video/mp4">
@@ -23,7 +23,7 @@
       <p>Coming soon for iPhone and Android</p>
     </div>
     <div class="download">
-      <p>Download Excursion (Coming soon!)</p>
+      <p><a href="#top">Download Excursion (Coming soon!)</a></p>
     </div>
     <div class="copyright">
       <p>© Excursion</p>
