--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Excursion coming soon!</title>
-    <link rel="stylesheet" type="text/css" href="./Resources/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="./Resources/CSS/style.css"/>
   </head>
   <body>
       <h1 id="top">Discover hidden places in the world around you</h1>
